# osgearth_rail

./: CMakeLists.txt  LICENSE  README.md  geoglyph3d.bat  geoglyph3d.sh
earth/: osmrail.earth  osmrail_buildings.earth
locomotive/: Amtrak17_car1.gltf  Amtrak17_car2.gltf  DSBIC3_car1.gltf  DSBIC3_car2.gltf  DSBIC3_car3.gltf  EurostarLivery_car1.gltf  EurostarLivery_car2.gltf  EurostarLivery_car3.gltf  EurostarLivery_car4.gltf  EurostarLivery_car5.gltf  EurostarLivery_car6.gltf  ICE3_car1.gltf  ICE3_car2.gltf  ICE3_car3.gltf  ICE3_car4.gltf  ICE3_car5.gltf  ICE3_car6.gltf  ICE3_car7.gltf  ICE3_car8.gltf  ReginaTren_car1.gltf  ReginaTren_car2.gltf  SJX55_car1.gltf  SJX55_car2.gltf  SJX55_car3.gltf  SJX55_car4.gltf  TGVReseau_car1.gltf  TGVReseau_car10.gltf  TGVReseau_car2.gltf  TGVReseau_car3.gltf  TGVReseau_car4.gltf  TGVReseau_car5.gltf  TGVReseau_car6.gltf  TGVReseau_car7.gltf  TGVReseau_car8.gltf  TGVReseau_car9.gltf  thalys_car1.gltf  thalys_car2.gltf  thalys_car3.gltf  thalys_car4.gltf  thalys_car5.gltf
python/: cpusage.py  simplecontroller.py
src/: ghMain.cpp  ghRail.cpp  ghRail.hpp  ghRailCommand.cpp  ghRailCommand.hpp  ghRailData.cpp  ghRailData.hpp  ghRailGUI  ghRailTime.cpp  ghRailTime.hpp  ghRailUnit.cpp  ghRailUnit.hpp  ghString.cpp  ghString.hpp
